--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,9 @@
       ]
     }
   ],
+  "options_ui": {
+    "page": "options/options.html"
+  },
   "applications": {
     "gecko": {
       "id": "web-ext@example.com"
