--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,7 @@
   },
   "background": {
     "scripts": [
+      "node_modules/webextension-polyfill/dist/browser-polyfill.js",
       "background/background.js"
     ]
   },
@@ -30,16 +31,14 @@
     "name": "Click!"
   },
   "icons": {
-    "16": "icon.png",
-    "48": "icon.png"
+    "16": "icons/icon.png",
+    "48": "icons/icon.png"
   },
   "commands": {
     "_execute_browser_action": {
       "suggested_key": {
-        "windows": "Ctrl+Alt+J",
-        "mac": "Command+Alt+J",
-        "chromeos": "Ctrl+Alt+J",
-        "linux": "Ctrl+Alt+J"
+        "windows": "Alt+J",
+        "mac": "Alt+J"
       }
     }
   },
