--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,7 @@
       ],
       "js": [
         "node_modules/webextension-polyfill/dist/browser-polyfill.js",
+        "node_modules/kuromoji/build/kuromoji.js",
         "content/content.js"
       ]
     }
@@ -26,6 +27,9 @@
       "background/background.js"
     ]
   },
+  "web_accessible_resources": [
+    "node_modules/kuromoji/dict/*.dat.gz"
+  ],
   "browser_action": {
     "default_icon": "icons/icon.png",
     "name": "Click!"
