--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "./node_modules/.bin/web-ext lint",
     "start": "./node_modules/.bin/web-ext run",
-    "startnr": "./node_modules/.bin/web-ext run --no-reload",
+    "startnr": "./node_modules/.bin/web-ext run --no-reload --start-url www.mozilla.com",
     "chrome": "./node_modules/.bin/web-ext run -t chromium",
+    "winchrome": "./node_modules/.bin/web-ext run -t chromium --chromium-binary C:/t/chrome-win/chrome.exe",
     "build": "./node_modules/.bin/web-ext build"
   },
   "repository": {
